alpm-types/src/snapshots/openpgp::invalid_packager@case_5_address_without_local_part.snap
---
source: alpm-types/src/openpgp.rs
---
Parser failed with the following error:
Foobar McFooface <@mcfooface.org>
                  ^
invalid Email address
Local part is empty.
